# triton_eval

./: .gitignore  Dockerfile  README.md  example_test.ipynb  main.py  problem_description.md  pyproject.toml  setup_instance.sh
axolotl_dev/: README.md  call_vllm_server.py  celery_config.py  check_ds.ipynb  config.yaml  config_14b.yaml  config_32b.yaml  config_4b.yaml  config_8b.yaml  config_sft.yaml  kernel_checks.py  performance_reward_usage.md  prepare_dataset.py  rewards.py  server.py  test_code_reward.py  test_kernel_checks.py  test_server.py  test_tools.py  tools.py  worker.py
axolotl_dev/configs/: chat_template.jinja  config_14b.yaml  config_32b.yaml  config_4b.yaml  config_8b.yaml  config_sft.yaml  config_sft_14b.yaml
axolotl_dev/deepspeed_configs/: zero2.json  zero3_bf16.json
axolotl_dev/sandbox/: benchmark.py  server.py  test_benchmark.py  worker.py
debug-k8/: debug-node.yaml  devpod2.yaml
kube-4gpu/: rewards-deployment.yaml  training-job.yaml  vllm-deployment.yaml
kubeconfigs/: axolotl-configmap.yaml  debug_pod.yaml  mega_config.yaml  new_pod.yaml  rewards-deployment.yaml  sft-job.yaml  shared-storage.yaml  training-job.yaml  vllm-deployment.yaml
scripts/: README.md  README_benchmark.md  agent_dataset_process.py  agent_dataset_process_oai.py  annotate_dataset.py  bootstrap_ds.py  call_vllm_server.py  dataset_viewer.py  eval_ds.py  eval_with_weave.py  fix_ds.py  format_ds.py  map_ds.py  new_ds.py  prompts.py  push_ds.py  push_to_hub.py  run_and_check.py  run_and_check_modal.py  run_ds.py  tools.py
scripts/data/: airy_ai.py  bitwise_and.py  simple_samples.jsonl  triton_cookbook.md
scripts/my_smol_agent/: agent.py  console.py  tool_calling.py  tools.py
tests/: test_eval.py  test_kernel_checks.py  test_language_checks.py  test_language_rewards.py  test_server.py  test_tools.py  test_utils.py
triton_eval/: eval.py  kernel_checks.py  language_checks.py  utils.py
triton_eval/agents/: agent.py  (+3 more)
(+3 files in other folders)
