[project]
name = "triton-eval"
version = "0.1.0"
description = "A simple triton/cuda execution framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "openai",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
eval = ["torch>=2.6"]

[tool.setuptools]
packages = ["triton_eval"]
